@@ -3,6 +3,7 @@ Changes for Crypt::SRP
 0.005   2013/04/09
         - added reset(), dump(), load(), server_fake_B_s()
         - server_init() and client_init() return $self
+        - removed validate_A_or_B; added server_verify_A() + client_verify_B()
         - introducing optional parameter $format
 
 0.004   2013/04/08
